--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -22,11 +22,14 @@
            
             <!-- Acces au parite en cour-->
             <div class="col-xl"> 
-            <div class="row align-items-center black" >
-                <a type="button" href="/searchpage" class="btn-agree">Rechercher une partie</a>
-                
-                <a type="button" href="/flux" class="btn-agree">Acceder au flux</a>
-                
+            <div class="row" >
+                <div class="row">
+                <a type="button" href="/searchpage" class="btn-search" style="width: 30%">Rechercher une partie</a>
+                <a type="button" href="/flux" class="btn-search" style="width: 30%">Acceder au flux</a>
+                </div>
+
+                <div class="row black-background">
+                <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
@@ -34,7 +37,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -45,7 +48,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -56,7 +59,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -64,7 +67,7 @@
 
 
 
-            <div class="row align-items-center">
+                <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
@@ -72,7 +75,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -83,7 +86,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -94,12 +97,14 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn btn-primary">Rejoindre</button>
+                            <button type="button" class="btn-search">Rejoindre</button>
                         </div>
                     </div>
                 </div>
 
-               <button type="button" class="btn-agree">cree une partie</button>
+               <button type="button" class="btn-agree" style="width: 30%">cree une partie</button>
+            </div>
+            </div>
             </div>
         </div>
         </div>
