--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -23,8 +23,8 @@
             <div class="col-xl">
                 <nav class="navbar">
                     <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="/profile" style="color: #ffff00">Profil</a>
-                        <a class="nav-link" href="#" style="color: yellow">Contacts</a>
+                        <a class="nav-link-1" aria-current="page" href="/profile">Profil</a>
+                        <a class="nav-link-1" href="#">Contacts</a>
                     </div>
                 </nav>
                 <div class="row">
