--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -31,7 +31,7 @@
                         </div>
                         <div class="col">
                             <h5>Pays</h5>
-                            <p><%= infos.pseudo%></p>
+                            <p>France</p>
                         </div>
                         <div class="col">
                             <h5>Fuseau horaire</h5>
