--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -31,35 +31,35 @@
                 <div class="row black-background">
                 <div class="row">
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -69,35 +69,35 @@
 
                 <div class="row">
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card-white" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Castel Or-Azur</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-search">Rejoindre</button>
+                            <button type="button" class="btn-default">Rejoindre</button>
                         </div>
                     </div>
                 </div>
