--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -17,7 +17,7 @@
         <%- include('navbar.ejs'); %>
 
       <div class="col-xl">
-        <div class="card">
+        <div class="card-black">
     <form method="post" action="/recherche" autocomplete="on">
       <div class="mb-3">
         <label class="col-form-label">Mots clé de la recherche</label>
