new CSS final v1.2

--- a/views/acceuil.ejs
+++ b/views/acceuil.ejs
@@ -37,7 +37,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-default">Rejoindre</button>
+                            <button type="button" class="btn-agree">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-default">Rejoindre</button>
+                            <button type="button" class="btn-agree">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-default">Rejoindre</button>
+                            <button type="button" class="btn-agree">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-default">Rejoindre</button>
+                            <button type="button" class="btn-agree">Rejoindre</button>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <p>1</p>
                             <i class="bi bi-person-fill"></i>
-                            <button type="button" class="btn-default">Rejoindre</button>
+                            <button type="button" class="btn-agree">Rejoindre</button>
                         </div>
                     </div>
                 </div>
