--- a/views/creation_partie.ejs
+++ b/views/creation_partie.ejs
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-md">
 
-                    <div class="card" style="width: 18rem; background-color: grey; border-radius: 12px; width: 50rem">
+                    <div class="card-white">
                         <div class="card-body">
                             <!-- Gauche-->
                             <label  for="Systeme">Systeme du jeu : </label>
