--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -23,7 +23,7 @@
                     </nav>
 
                 <!-- Card profil-->
-                    <div class="grey-background">
+                    <div class="card-white">
                     <div class="row">
                         <div class="col">
                             <h5>Nom utilisateur</h5>
