new CSS final v1.3

--- a/views/style.css
+++ b/views/style.css
@@ -152,7 +152,7 @@ label{
 
 .grey-background{
     background-color: darkgrey;
-    color: #161111;
+    color: white;
     border-radius: 12px;
     padding: 10px;
     margin-left: 10px;
